# diy-vape

./: .gitignore  Cargo.toml  Embed.toml  README.md  link-patch.x  memory.x
.cargo/: config.toml
.run/: Flash UF2.run.xml
src/: lib.rs  main.rs  types.rs  values.rs
src/core/: adc.rs  charge.rs  charge_status.rs  charging.rs  cleaner.rs  graphics.rs  icons.rs  mod.rs  renderer.rs  strings.rs  tab.rs  timer.rs  ui.rs
src/core/ui/: bouding.rs  buttons.rs  header.rs  place.rs  placing.rs  power_and_limit.rs  tab.rs  widget.rs
src/data/: action.rs  battery.rs  button.rs  buttons.rs  config.rs  edit_settings.rs  mod.rs  mode.rs  power.rs  reset_puffs.rs  state.rs  stats.rs  tab.rs
src/ext/: error.rs  image_ext.rs  led_ext.rs  mod.rs  option_ext.rs  pin_ext.rs  result_ext.rs  str_ext.rs  text_ext.rs
src/flash/: flash.rs  flash_storage.rs  flash_value.rs  mod.rs  savable.rs
src/games/life/: life.rs  mod.rs  universe.rs
src/macro/: format.rs  icon_bytes.rs  kopy.rs  mod.rs
src/util/: blocking.rs  logging.rs  mod.rs  panic_handler.rs
